# nychousing

./: .gitignore  README.md  config.example.yaml  pyproject.toml  pytest.py
.github/workflows/: hourly.yml
app/: __init__.py  bulk_import.py  commute_table.py  config.py  db.py  dedupe.py  draft_message.py  filters.py  gmail_client.py  location.py  main.py  models.py  normalize.py  notify.py  outbox.py  scoring.py  sheets_client.py  source_client.py  yerr_client.py
app/parsers/: __init__.py  craigslist_email.py  generic_email.py  leasebreak_email.py  manual_import.py  streeteasy_email.py
data/: commute_table.sample.csv  neighborhood_aliases.yaml
scripts/: create_google_oauth_token.py  generate_commute_table.py
tests/: test_bulk_import.py  test_dedupe.py  test_filters.py  test_gmail_client.py  test_ingestion.py  test_location.py  test_messages.py  test_outbox.py  test_parsers.py  test_scoring.py  test_sheets.py  test_source_client.py  test_yerr_client.py
tests/fixtures/: craigslist_email.html  generic_newsletter.html  streeteasy_email.html
tests/fixtures/sources/: craigslist_sample.rss
